Improved loading multiple groups
Instead of "student null", use the first part of the log file name
Removed "utah" in "utah session started at..."
Removed the legend with the sim names
Added pop-up window for server monitor text output
# 00.00.24 (60567) Jan 24, 2012
# 00.00.23 (60550) Jan 23, 2012
Added group comparison tool which produces comparative bar charts for multiple conditions
# 00.00.22 (60529) Jan 23, 2012
Fixed: Null pointer checks on server database monitor
Fixed: Pressing reset all should not count as a solution transition
Fixed: The total number of clicks and the sum of the clicks per min should be equal in the histogram
Fixed: If the conductivity test is selected, the analysis tool should not count it as a view transition
Fixed: If the conductivity test is selected, the analysis tool should count the view as liquid for "time on views"
Added Font + and Font - buttons to real time analysis
Renamed plot-student-activity => post-analysis
# 00.00.21 (60505) Jan 23, 2012
Rewrote state change detection code for tab 2 based on different radio buttons
Only count transitions within same tab, not when switching tabs
Fixed histogram to read clicks within each minute, not click frequency
# 00.00.20 (60477) Jan 20, 2012
# 00.00.19 (60471) Jan 19, 2012
# 00.00.18 (60465) Jan 19, 2012
# 00.00.17 (60454) Jan 18, 2012
# 00.00.16 (60451) Jan 18, 2012
# 00.00.15 (60441) Jan 18, 2012
# 00.00.14 (60439) Jan 18, 2012
# 00.00.13 (60437) Jan 18, 2012
# 00.00.12 (60417) Jan 18, 2012
# 00.00.11 (60410) Jan 18, 2012
# 00.00.10 (60367) Jan 17, 2012
# 00.00.09 (60365) Jan 17, 2012
# 00.00.08 (60295) Jan 14, 2012
# 00.00.07 (58838) Nov 29, 2011
Added a legend
Show tooltips on camera so they don't scale with zoom level
Added tooltips for specific events
Made yellow (system) events wider and always behind black (user) events
Added plots for events and unique events
Show tick label above the tick lines